# econoapp

./: Dockerfile  docker-compose.yml  env.dev  manage.py  pyproject.toml
FinancialTransactions/: admin.py  apps.py  factories.py  urls.py
FinancialTransactions/migrations/: 0001_initial.py  0002_category_expense_alter_entry_category.py  0003_alter_entry_date.py  0004_bankaccount.py  0005_entry_account.py
FinancialTransactions/models/: __init__.py  account_model.py  category_model.py  entry_model.py  expense_model.py
FinancialTransactions/serializers/: __init__.py  expense_serializer.py  transactions_serializer.py
FinancialTransactions/tests/test_viewsets/: __init__.py  exemplo.py
FinancialTransactions/viewsets/: Entry_viewset.py  __init__.py  expense_viewset.py
econoapp/: asgi.py  settings.py  urls.py  wsgi.py
